[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
authors = ["SummerSnake"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
rust-crypto = "0.2.36"
bincode = "1.3.3"
failure = "0.1.8"
sled = "0.34.7"
serde = { version = "1.0.144", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
clap = "3.2.17"
